--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -306,11 +306,15 @@
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Teraz môžete s vašimi priateľmi na Signalu zdieľať vašu profilovú fotku a meno</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal profily sú tu</string>
   <string name="ExperienceUpgradeActivity_introducing_typing_indicators">Predstavujeme indikátory písania.</string>
+  <string name="ExperienceUpgradeActivity_now_you_can_optionally_see_and_share_when_messages_are_being_typed">Teraz môžete voliteľne vidieť a zdieľať, keď sú správy písané.</string>
   <string name="ExperienceUpgradeActivity_would_you_like_to_enable_them_now">Želáte si ich zapnúť?</string>
   <string name="ExperienceUpgradeActivity_typing_ui_title">Indikátory písania sú tu</string>
   <string name="ExperienceUpgradeActivity_enable_typing_indicators">Povoliť indikátory písania</string>
   <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">Zapnúť indikátory písania</string>
   <string name="ExperienceUpgradeActivity_no_thanks">Nie, ďakujem</string>
+  <string name="ExperienceUpgradeActivity_introducing_link_previews">Uvádzame náhľady stránok.</string>
+  <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">Náhľady sú teraz voliteľne podporované pre niektoré z najpopulárnejších webových stránok na internete.</string>
+  <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Túto funkciu môžete kedykoľvek vypnúť alebo zapnúť v nastaveniach Signal-u (Súkromie &gt; Posielať náhľady stránok).</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Preberanie správy…</string>
   <!--GcmRefreshJob-->
@@ -369,6 +373,7 @@
   <string name="InviteActivity_no_app_to_share_to">Vyzerá to, že nemáte žiadne aplikácie kam by ste mohli zdieľať.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Priatelia nenechávajú priateľov chatovať nešifrovane.</string>
   <!--Job-->
+  <string name="Job_working_in_the_background">Práca na pozadí...</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Nepodarilo sa odoslať</string>
   <string name="MessageDetailsRecipient_new_safety_number">Nové bezpečnostné číslo</string>
@@ -409,8 +414,17 @@
   <string name="NotificationMmsMessageRecord_downloading_mms_message">Preberanie MMS správy</string>
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Chyba pri preberaní MMS správy, ťuknite pre opakovanie</string>
   <!--MediaPickerActivity-->
+  <string name="MediaPickerActivity_send_to">Poslať používateľovi %s</string>
   <!--MediaPickerItemFragment-->
+  <string name="MediaPickerItemFragment_tap_to_select">Označte ťuknutím</string>
+  <plurals name="MediaPickerItemFragment_cant_share_more_than_n_items">
+    <item quantity="one">Nemôžete zdieľať viac ako %d položku.</item>
+    <item quantity="few">Nemôžete zdieľať viac ako %d položky.</item>
+    <item quantity="many">Nemôžete zdieľať viac ako %d položiek.</item>
+    <item quantity="other">Nemôžete zdieľať viac ako %d položiek.</item>
+  </plurals>
   <!--MediaSendActivity-->
+  <string name="MediaSendActivity_add_a_caption">Pridaj popis...</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Všetky médiá</string>
   <!--MessageRecord-->
@@ -483,6 +497,7 @@
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Už nebudete od tohto kontaktu dostávať správy a hovory.</string>
   <string name="RecipientPreferenceActivity_block_and_leave_group">Blokovať a opustiť túto skupinu?</string>
   <string name="RecipientPreferenceActivity_block_group">Blokovať túto skupinu?</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group_description">Už nebudete dostávať správy a aktualizácie od tejto skupiny.</string>
   <string name="RecipientPreferenceActivity_block">Blokovať</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Odblokovať tento kontakt?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Znovu budete dostávať správy a hovory od tohoto kontaktu.</string>
@@ -1011,6 +1026,8 @@ Bola prijatá správa výmeny kľúčov s neplatnou verziou protokolu.
   <string name="preferences__use_signal_for_viewing_and_storing_all_incoming_multimedia_messages">Použiť Signal pre všetky prichádzajúce multimediálne správy</string>
   <string name="preferences__pref_enter_sends_title">Odoslať stlačením klávesy Enter</string>
   <string name="preferences__pressing_the_enter_key_will_send_text_messages">Stlačením klávesy Enter sa správa odošle</string>
+  <string name="preferences__send_link_previews">Posielať náhľady stránok</string>
+  <string name="preferences__previews_are_supported_for">Podporované sú náhľady webových stránok Imgur, Instagram, Reddit a YouTube</string>
   <string name="preferences__choose_identity">Vyberať identitu</string>
   <string name="preferences__choose_your_contact_entry_from_the_contacts_list">Vyberte Váš kontakt zo zoznamu kontaktov.</string>
   <string name="preferences__change_passphrase">Zmeniť heslo</string>
