--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -154,6 +154,7 @@
   <string name="ConversationActivity_signal_needs_the_camera_permission_to_take_photos_or_video">Signal, fotoğraf veya video çekmek için Kamera iznine ihtiyaç duyar, fakat bu izin kalıcı olarak reddedilmiş. Lütfen uygulama ayarları menüsüne girip \"İzinler\" kısmını seçin, ve \"Kamera\"yı etkinleştirin.</string>
   <string name="ConversationActivity_signal_needs_camera_permissions_to_take_photos_or_video">Signal fotoğraf veya video çekebilmek için kamera erişimine ihtiyaç duyar</string>
   <string name="ConversationActivity_quoted_contact_message">%1$s %2$s</string>
+  <string name="ConversationActivity_signal_cannot_sent_sms_mms_messages_because_it_is_not_your_default_sms_app">Signal varsayılan SMS uygulaması olmadığı için SMS/MMS mesajları gönderemiyor. Bunu Android ayarlarınızdan değiştirmek ister misiniz?</string>
   <string name="ConversationActivity_yes">Evet</string>
   <string name="ConversationActivity_no">Hayır</string>
   <!--ConversationAdapter-->
@@ -283,6 +284,9 @@
   <string name="ExperienceUpgradeActivity_enable_typing_indicators">\'Yazıyor\' göstergelerini etkinleştrin.</string>
   <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">\'Yazıyor\' göstergelerini aç</string>
   <string name="ExperienceUpgradeActivity_no_thanks">Hayır teşekkürler</string>
+  <string name="ExperienceUpgradeActivity_introducing_link_previews">Bağlantı ön izlemeleri ile tanışın.</string>
+  <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">İsteğe bağlı bağlantı ön izlemeleri artık İnternet\'teki bazı gözde siteler için desteklenmektedir.</string>
+  <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">Bu özelliği istediğiniz zaman Signal ayarlarınızdan (Gizlilik &gt; Bağlantı ön izlemelerini gönder). etkinleştirebilir veya devre dışı bırakabilirsiniz.</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">Mesaj alınıyor...</string>
   <!--GcmRefreshJob-->
@@ -374,8 +378,15 @@
   <string name="NotificationMmsMessageRecord_downloading_mms_message">MMS mesajı indiriliyor</string>
   <string name="NotificationMmsMessageRecord_error_downloading_mms_message">MMS mesajı indirilirken hata, yeniden denemek için dokunun</string>
   <!--MediaPickerActivity-->
+  <string name="MediaPickerActivity_send_to">%s alıcısına gönder</string>
   <!--MediaPickerItemFragment-->
+  <string name="MediaPickerItemFragment_tap_to_select">Seçmek için dokunun</string>
+  <plurals name="MediaPickerItemFragment_cant_share_more_than_n_items">
+    <item quantity="one">%d öğeden daha fazlasını paylaşamazsınız.</item>
+    <item quantity="other">%d öğeden daha fazlasını paylaşamazsınız.</item>
+  </plurals>
   <!--MediaSendActivity-->
+  <string name="MediaSendActivity_add_a_caption">Bir başlık ekleyin...</string>
   <!--MediaRepository-->
   <string name="MediaRepository_all_media">Tüm medya</string>
   <!--MessageRecord-->
@@ -957,6 +968,8 @@ Geçersiz protokol sürümünde anahtar değişim mesajı alındı.</string>
   <string name="preferences__use_signal_for_viewing_and_storing_all_incoming_multimedia_messages">Gelen tüm medya mesajları için Signal kullanın</string>
   <string name="preferences__pref_enter_sends_title">Enter tuşu ile gönder</string>
   <string name="preferences__pressing_the_enter_key_will_send_text_messages">Enter tuşuna basarak mesajı gönder</string>
+  <string name="preferences__send_link_previews">Bağlantı ön izlemelerini gönder</string>
+  <string name="preferences__previews_are_supported_for">Ön izlemeler Imgur, Instagram, Reddit, ve YouTube bağlantıları için desteklenmektedir</string>
   <string name="preferences__choose_identity">Kimlik seçin</string>
   <string name="preferences__choose_your_contact_entry_from_the_contacts_list">Kişi girdinizi kişi listesinden seçin.</string>
   <string name="preferences__change_passphrase">Parola değiştir</string>
