--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -270,6 +270,9 @@
   <string name="ExperienceUpgradeActivity_enable_typing_indicators">啟動打字狀態</string>
   <string name="ExperienceUpgradeActivity_turn_on_typing_indicators">開啟打字狀態</string>
   <string name="ExperienceUpgradeActivity_no_thanks">不，謝謝。</string>
+  <string name="ExperienceUpgradeActivity_introducing_link_previews">連結預覽功能介紹。</string>
+  <string name="ExperienceUpgradeActivity_optional_link_previews_are_now_supported">連結預覽選項現在支援網路上一些最受歡迎的網站。</string>
+  <string name="ExperienceUpgradeActivity_you_can_disable_or_enable_this_feature_link_previews">任何時候你可以在 Signal 設定中關閉或開啟這個功能 (隱私 &gt; 傳送連結預覽)。</string>
   <!--GcmBroadcastReceiver-->
   <string name="GcmBroadcastReceiver_retrieving_a_message">回收一個訊息...</string>
   <!--GcmRefreshJob-->
@@ -934,6 +937,8 @@
   <string name="preferences__use_signal_for_viewing_and_storing_all_incoming_multimedia_messages">使用 Signal 接收所有多媒體訊息</string>
   <string name="preferences__pref_enter_sends_title">按下輸入鍵發送</string>
   <string name="preferences__pressing_the_enter_key_will_send_text_messages">按下輸入鍵將會發送訊息</string>
+  <string name="preferences__send_link_previews">傳送連結預覽</string>
+  <string name="preferences__previews_are_supported_for">預覽功能支援 Imgur、Instagram、Reddit 及 YouTube的連結。</string>
   <string name="preferences__choose_identity">選擇身分</string>
   <string name="preferences__choose_your_contact_entry_from_the_contacts_list">從您的聯絡人清單中選擇聯絡人項目。</string>
   <string name="preferences__change_passphrase">變更自訂密碼</string>
